--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -20,7 +20,7 @@
         tools:src="@drawable/ic_baseline_person_24" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/tvName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -35,7 +35,7 @@
         tools:layout_editor_absoluteY="314dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvDepart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
