--- a/app/src/main/res/layout/nfc_reader.xml
+++ b/app/src/main/res/layout/nfc_reader.xml
@@ -7,7 +7,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 <TextView
-    android:id="@+id/textView"
+    android:id="@+id/tvDepart"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="150dp"
@@ -27,5 +27,5 @@ android:layout_height="match_parent">
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView" />
+    app:layout_constraintTop_toBottomOf="@+id/tvDepart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
