--- a/app/src/main/res/layout/activity_admin_login_first.xml
+++ b/app/src/main/res/layout/activity_admin_login_first.xml
@@ -11,7 +11,7 @@
         android:layout_width="160dp"
         android:layout_height="140dp"
         android:layout_marginTop="210dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvDepart"
+        app:layout_constraintBottom_toTopOf="@+id/tvId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,12 +47,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDepart"
+        app:layout_constraintTop_toBottomOf="@+id/tvId"
         app:layout_constraintVertical_bias="0.499"
         />
 
     <TextView
-        android:id="@+id/tvDepart"
+        android:id="@+id/tvId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
