--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -35,7 +35,7 @@
             android:textSize="20dp"/>
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -50,6 +50,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="4"/>
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
