--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
     <TextView
         android:id="@+id/tvMajor"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDepart" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/imgProfile"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginTop="50dp"
