--- a/app/src/main/res/layout/activity_admin_read_card.xml
+++ b/app/src/main/res/layout/activity_admin_read_card.xml
@@ -9,7 +9,7 @@
     tools:context=".idcard">
 
     <ImageView
-        android:id="@+id/action_image"
+        android:id="@+id/ivImage"
         android:layout_width="198dp"
         android:layout_height="215dp"
         android:layout_marginTop="44dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/action_image"
+        app:layout_constraintTop_toTopOf="@+id/ivImage"
         app:layout_constraintVertical_bias="0.98" />
 
     <TextView
@@ -125,7 +125,7 @@
         app:layout_constraintBottom_toTopOf="@+id/money"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/action_image"
+        app:layout_constraintTop_toBottomOf="@+id/ivImage"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
