--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/action_image"
+        android:id="@+id/imgProfile"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginTop="200dp"
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_baseline_person_24" />
+        tools:src="@drawable/person" />
 
     <TextView
         android:id="@+id/tvName"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/action_image" />
+        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
     <TextView
         android:id="@+id/tvId"
