--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -22,16 +22,23 @@
         android:layout_marginHorizontal="10dp">
 
         <TextView
-            android:layout_width="130dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="2"
+            android:text="날짜"
+            android:textSize="20dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="시간"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:text="장소"
             android:textSize="20dp"/>
     </LinearLayout>
@@ -47,16 +54,22 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/dateResult"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" />
+
+            <TextView
                 android:id="@+id/timeResult"
-                android:layout_width="150dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/spotResult"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4" />
+                android:layout_weight="3" />
         </LinearLayout>
     </ScrollView>
 
