--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -19,19 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="10dp">
+        android:layout_marginHorizontal="10dp"
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+
             android:layout_weight="2"
             android:text="날짜"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+
             android:layout_weight="1"
             android:text="시간"
             android:textSize="20dp" />
@@ -40,6 +41,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:text="장소"
+            android:textSize="20dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="학번"
             android:textSize="20dp"/>
     </LinearLayout>
 
@@ -70,6 +77,12 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3" />
+
+            <TextView
+                android:id="@+id/idResult"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" />
         </LinearLayout>
     </ScrollView>
 
