--- a/app/src/main/res/layout/activity_nfc_reader.xml
+++ b/app/src/main/res/layout/activity_nfc_reader.xml
@@ -18,12 +18,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/statementTV"
+    <Button
+        android:id="@+id/btnLoad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(NFC 상태)"
-        android:textAlignment="center"
+        android:layout_marginTop="160dp"
+        android:layout_marginBottom="20dp"
+        android:text="정보 띄우기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
