--- a/app/src/main/res/layout/activity_login_first.xml
+++ b/app/src/main/res/layout/activity_login_first.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
         android:background="#404040"
-        android:text="출입기록확인"
+        android:text="로그아웃"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#404040"
-        android:text="리더기"
+        android:text="모바일 아이디 카드"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnPay"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#404040"
-        android:text="출결확인"
+        android:text="결제"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnLogout"
