--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -83,11 +83,15 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="20dp"
         android:paddingLeft="30dp"
         android:src="@drawable/symbol"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMajor" />
+        app:layout_constraintTop_toBottomOf="@+id/tvMajor"
+        app:layout_constraintVertical_bias="0.35" />
 
     <TextView
         android:id="@+id/textView5"
