--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -26,14 +26,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:layout_weight="2"
+            android:layout_weight="1.8"
             android:text="날짜"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:layout_weight="1"
+            android:layout_weight="1.2"
             android:text="시간"
             android:textSize="20dp" />
         <TextView
@@ -64,25 +64,33 @@
                 android:id="@+id/dateResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2" />
+                android:layout_weight="1.8"
+                android:textSize="15dp"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/timeResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1.2"
+                android:textSize="15dp"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/spotResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3" />
+                android:layout_weight="3"
+                android:textSize="15dp"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/idResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2" />
+                android:layout_weight="2"
+                android:textSize="15dp"
+                android:textColor="@color/black"/>
         </LinearLayout>
     </ScrollView>
 
