--- a/app/src/main/res/layout/activity_admin_read_card.xml
+++ b/app/src/main/res/layout/activity_admin_read_card.xml
@@ -12,9 +12,10 @@
     <ImageView
         android:id="@+id/ImgView"
         android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="64dp"
+        android:layout_height="210dp"
+        android:layout_marginTop="48dp"
         android:padding="20dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
