--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -11,10 +11,11 @@
 
     <ImageView
         android:id="@+id/imgProfile"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="250dp"
         android:layout_marginTop="200dp"
         android:padding="20dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/tvName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
