--- a/app/src/main/res/layout/activity_admin_login_first.xml
+++ b/app/src/main/res/layout/activity_admin_login_first.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
-        android:background="#404040"
+        android:background="@drawable/btn_radius"
         android:text="출입기록확인"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
@@ -41,8 +41,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#404040"
-        android:text="리더기"
+        android:background="@drawable/btn_radius"
+        android:text="리    더    기"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnPay"
@@ -56,8 +56,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#404040"
-        android:text="출결확인"
+        android:background="@drawable/btn_radius"
+        android:text="출  결  확  인"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnLogout"
