--- a/app/src/main/res/drawable/edge_bottom.xml
+++ b/app/src/main/res/drawable/edge_bottom.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:bottom="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/lightgray"/>
         </shape>
     </item>
 </layer-list>
