--- a/app/src/main/res/drawable/layou_shape.xml
+++ b/app/src/main/res/drawable/layou_shape.xml
@@ -3,7 +3,7 @@
     <item>
     <shape
         android:shape="rectangle">
-        <solid android:color="#A53235" />
+        <solid android:color="@color/white" />
         <stroke android:color="#CCCCCC" android:width="1dp" />
         <corners android:radius="25dp" />
     </shape>
