--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,10 +51,9 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTv" >
 
         <LinearLayout
-        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/white"
         android:orientation="horizontal">
             <TextView
@@ -75,11 +74,11 @@
                 android:layout_weight="3"
                 android:ems="10"
                 android:hint="학번"
-                android:inputType="text" />
+                android:inputType="text"
+                android:layout_marginLeft="5dp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -104,7 +103,8 @@
                 android:layout_weight="3"
                 android:ems="10"
                 android:hint="비밀번호"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:layout_marginLeft="5dp"/>
         </LinearLayout>
 
         <LinearLayout
