--- a/app/src/main/res/layout/activity_attend_confirm.xml
+++ b/app/src/main/res/layout/activity_attend_confirm.xml
@@ -18,15 +18,15 @@
 
         <TextView
             android:id="@+id/tvProfessor"
-            android:layout_width="0dp"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:text="교수님성함"
-            android:layout_weight="1"
-            android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/edge_bottom"
+            android:text="교수님성함"
             android:textColor="@color/black"
-            android:background="@drawable/edge_bottom" />
+            android:textSize="20dp" />
 
         <Spinner
             android:id="@+id/spinner"
