--- a/app/src/main/res/layout/activity_attend_confirm.xml
+++ b/app/src/main/res/layout/activity_attend_confirm.xml
@@ -18,29 +18,27 @@
 
         <TextView
             android:id="@+id/tvProfessor"
-            android:layout_width="30dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:layout_weight="1"
             android:background="@drawable/edge_bottom"
-            android:text="교수님성함"
+            android:text="교수님 성함"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="0dp"
+            android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:layout_gravity="center"
             android:layout_marginHorizontal="5dp"/>
 
         <Button
             android:id="@+id/btnclassDate"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center"
             android:text="날짜 선택" />
 
     </LinearLayout>
